--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+    <link href="https://fonts.googleapis.com/css2?family=Barriecito&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="assets/css/styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -55,7 +55,7 @@
         </div>
         <!--Main and sub headings-->
         <div id="h-content" class="row align-items-center text-center">
-            <div class="col-lg-6">
+            <div id="h-writing" class="col-lg-6">
                 <h1>Reece Smith</h1>
                 <h2>Full Stack Web Developer</h2>
                 <h3>Turning ideas into reality, one line of code at a time.</h3>
@@ -65,11 +65,11 @@
                 <img class="img-fluid" src="assets/images/Header.png" alt="Reece Smith Portrait">
             </div>
         </div>
-        <!--Scroll down prompt-->
-        <div style="position:absolute;">
+        <!--Scroll down prompt. Removed as it's currently beyond the scope-->
+        <!--<div id="scroll-prompt">
             <p>More Below</p>
             <i class="fas fa-chevron-down"></i>
-        </div>
+        </div>-->
     </header>
     <section id="about" class="container-fluid text-center">
         <!--Portait that pairs with the about me section writing-->
@@ -79,12 +79,12 @@
             </div>
             <!-- Heading and paragraph for the about section-->
             <div class="col-lg-6">
-                <h2>Hello World! I'm Reece Smith</h2>
+                <h2 id="a-heading">Hello World! I'm Reece Smith</h2>
                 <p>
                     I'm currently a dedicated student at the Code Institute,
                     immersing myself in the exciting world of web development.
                     My journey so far has included learning languages such as
-                    HTML and CSS, as well as the Bootstrap framework. Additionally,
+                    HTML, CSS and JavaScript, as well as the Bootstrap framework. Additionally,
                     I've become proficient in version control software like Git,
                     and I've explored tools such as Balsamiq for wireframing and
                     GitHub as a software development platform. I've also utilised
@@ -94,18 +94,20 @@
                 </p>
                 <!--Contact me button that takes you to the contact section-->
                 <a href="#contact">
-                    <button>Contact Me</button>
+                    <button id="button">Contact Me</button>
                 </a>
             </div>
         </div>
-        <!--Scroll down prompt and arrow icon-->
-        <div style="position:absolute;">
+        <!--Scroll down prompt. Removed as it's currently beyond the scope-->
+        <!--<div>
             <p>Why Not Check Out My Projects?</p>
             <i class="fas fa-chevron-down"></i>
-        </div>
+        </div>-->
     </section>
     <section id="projects" class="container-fluid text-center">
         <!--Project gallery with anchored screenshots and project titles-->
+        <!--Project gallary pictures will be replaced by code snipets screenshots
+        and the anchor tag will take you to a seperate page which is exclusivily about that project-->
         <div class="row">
             <div class="col-lg-6">
                 <figure>
